--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <main>
         <!--2 section-->
         <section id="why__cryptochange" class="why__wrapper">
-            <div>
+            <div class="why__cryptochange-block">
                 <!--
                     <span class="#">
                     </span> 
@@ -78,7 +78,7 @@
                 -->
                 <h2 class="why__header">Why cryptochange?</h2>
                 <div class="text__wrapper">
-                    <div class="text__container__bolt-font">
+                    <div class="text__container-bolt-font">
                         <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
                         </p>
                     </div>
@@ -91,103 +91,103 @@
                             if you need to exchange any coins or fiat money, you can do it within 10 minutes instead of
                             2-10 hours! With Cryptochange, we step into the new crypto world. Join our ICO!</p>
                     </div>
-                    <div class="links__container__arrow">
-                        <div>
-                            <div>
+                    <div class="links__container-arrow">
+                        <div class="yellow__arrow-one">
+                            <div class="image__one">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                             </div>
-                            <div>
+                            <div class="based__on">
                                 <p>Based on</p>
                                 <a href="https://en.wikipedia.org/wiki/Blockchain">Blockchain</a>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="yellow__arrow-two">
+                            <div class="global__payments">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <a href="https://en.wikipedia.org/wiki/Global_Payments">Global Payments</a>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="yellow__arrow-three">
+                            <div class="crypto__to-fait">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Crypto to Fiat</p>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="yellow__arrow-four>
+                            <div class="instant__transactions">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Instant Transactions</p>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="yellow__arrow-five>
+                            <div class="free__of-custody">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Free of Custody</p>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="yellow__arrow-six>
+                            <div class="the__best-rates">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>The Best Rates</p>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="yellow__arrow-seven>
+                            <div class="all__types__of-altcoins">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>All Types of Altcoins</p>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="yellow__arrow-eight>
+                            <div class="ptwop__payments">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>P2P Payments</p>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="yellow__arrow-nine">
+                            <div class="reliable__service">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Reliable Service</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="image__wrapper"><img class="image__wrapper__why" src="img/why_cryptochange.png" alt="why_cry">
+                <div class="image__wrapper"><img class="image__wrapper-why" src="img/why_cryptochange.png" alt="why_cry">
                 </div>
                 <div class="paginator__wrapper">
-                    <div><Button id="left_btn"></Button></div>
+                    <div class="button__left"><Button id="left_btn"></Button></div>
                     <div class="block__group">
-                        <div>
-                            <div>
+                        <div class="block__one-ol">
+                            <div class="anycash__one">
                                 <img class="anycash" src="img/anycash.svg" alt="anycash" width="100">
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <div>
+                    <div class="block__two-ol">
+                        <div class="indacoin__two">
                             <img class="indacoin" src="img/indacoin.svg" alt="indacoin" width="100">
                         </div>
                     </div>
-                    <div>
-                        <div>
+                    <div class="block__three-ol">
+                        <div class="intotheblock__three">
                             <img class="intotheblock" src="img/intotheblock.svg" alt="intotheblock" width="100">
                         </div>
                     </div>
-                    <div>
-                        <div>
+                    <div class="block__four-ol">
+                        <div class="listinghelp__four">
                             <img class="listinghelp" src="img/listinghelp.svg" alt="listinghelp" width="100">
                         </div>
                     </div>
-                    <div>
-                        <div>
+                    <div class="block__five-ol">
+                        <div class="mercuryo__five">
                             <img class="mercuryo" src="img/mercuryo.svg" alt="mercuryo" width="100">
                         </div>
                     </div>
-                    <div>
-                        <div>
+                    <div class="block__six-ol">
+                        <div class="moonpay__six">
                             <img class="moonpay" src="img/moonpay.svg" alt="moonpay" width="100">
                         </div>
                     </div>
-                    <div><Button id="right_btn"></Button></div>
+                    <div class="button__right"><Button id="right_btn"></Button></div>
                 </div>
             </div>
         </section>
