--- a/index.html
+++ b/index.html
@@ -104,31 +104,31 @@
                                 <p>Crypto to Fiat</p>
                             </div>
                         </div>
-                        <div class="yellow__arrow-four>
+                        <div class="yellow__arrow-four">
                             <div class="instant__transactions">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Instant Transactions</p>
                             </div>
                         </div>
-                        <div class="yellow__arrow-five>
+                        <div class="yellow__arrow-five">
                             <div class="free__of-custody">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Free of Custody</p>
                             </div>
                         </div>
-                        <div class="yellow__arrow-six>
+                        <div class="yellow__arrow-six">
                             <div class="the__best-rates">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>The Best Rates</p>
                             </div>
                         </div>
-                        <div class="yellow__arrow-seven>
+                        <div class="yellow__arrow-seven">
                             <div class="all__types__of-altcoins">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>All Types of Altcoins</p>
                             </div>
                         </div>
-                        <div class="yellow__arrow-eight>
+                        <div class="yellow__arrow-eight">
                             <div class="ptwop__payments">
                                 <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>P2P Payments</p>
