add div to 8 block

--- a/index.html
+++ b/index.html
@@ -713,6 +713,7 @@
         <!--Recommendation-add class name into tags (h2, h3, p, div,)-->
         <section class="section__question-need-cryptochange">
             <div>
+                <div></div>
                 <div class="divider__yellow-dash">
                     <h2>—</h2>
                 </div>
