--- a/index.html
+++ b/index.html
@@ -192,34 +192,33 @@
             </div>
             <div class="ico-progress__row row">
                 <div class="row__title">
-                    <p>Funds Raised</p>
+                    <p class="row__title">Funds Raised</p>
                     <div class="row__value">
-                        <p>$1 354 654. 65</p>
+                        <p class="row__value">$1 354 654. 65</p>
                     </div>
                 </div>
                 <div class="row__title">
-                    <p>Worth of Tokens</p>
+                    <p class="row__title">Worth of Tokens</p>
                     <div class="row__value">
-                        <p>$34.435.322</p>
+                        <p class="row__value">$34.435.322</p>
                     </div>
                 </div>
                 <div class="row__title">
-                    <p>BTC Raised</p>
+                    <p class="row__title">BTC Raised</p>
                     <div class="row__value">
-                        <p>1890.0348</p>
+                        <p class="row__value">1890.0348</p>
                     </div>
                 </div>
                 <div class="row__title">
-                    <p>Tokens Distributed
-                    <p>
+                    <p class="row__title">Tokens Distributed<p>
                     <div class="row__value">
-                        <p>56432</p>
+                        <p class="row__value">56432</p>
                     </div>
                 </div>
                 <a class="ico-progress__buy-crp" href="#">Buy CRP Tokens</a>
             </div>
             <div class="ico-progress__image">
-                <img width="200" src="img/cryptocurrency-chart.jpg" alt="cryptocurrency-chart">
+                <img class="ico-progress__image" width="200" src="img/cryptocurrency-chart.jpg" alt="cryptocurrency-chart">
             </div>
         </section>
         <!--end of 3 section-->
@@ -277,13 +276,13 @@
                 <div class="table__column column">
                     <div class="column__text text">
                         <div class="text__month-year">
-                            <p>January, 2020</p>
+                            <p class="text__month-year">January, 2020</p>
                         </div>
                         <div class="text__title">
-                            <p>Platform Idea</p>
+                            <p class="text__title">Platform Idea</p>
                         </div>
                         <div class="text__description">
-                            <p>Our owners were faced with the need to make a lot of crypto transactions and exchange
+                            <p class="text__description">Our owners were faced with the need to make a lot of crypto transactions and exchange
                                 cryptocurrency really quickly. This is how Cryptochange was born.</p>
                         </div>
                     </div>
@@ -294,13 +293,13 @@
                 <div class="table__column column">
                     <div class="column__text text">
                         <div class="text__month-year">
-                            <p>May, 2020</p>
+                            <p class="text__month-year">May, 2020</p>
                         </div>
                         <div class="text__title">
-                            <p>MVP Development</p>
+                            <p class="text__title">MVP Development</p>
                         </div>
                         <div class="text__description">
-                            <p>We have been developing our MVP for almost six months to take into account all the
+                            <p class="text__description">We have been developing our MVP for almost six months to take into account all the
                                 problems that exist in the crypto payments and exchange market.</p>
                         </div>
                     </div>
@@ -311,14 +310,13 @@
                 <div class="table__column column">
                     <div class="column__text text">
                         <div class="text__month-year">
-                            <p>
-                                October, 2021</p>
+                            <p class="text__month-year">October, 2021</p>
                         </div>
                         <div class="text__title">
-                            <p>Pitching at Crypto Expo 2021</p>
+                            <p class="text__title">Pitching at Crypto Expo 2021</p>
                         </div>
                         <div class="text__description">
-                            <p>We presented our project at Crypto Expo 2021 in Seoul for the first time and received a
+                            <p class="text__description">We presented our project at Crypto Expo 2021 in Seoul for the first time and received a
                                 lot of positive feedback, as well as constructive criticism, which helped us to move
                                 forward.</p>
                         </div>
@@ -330,13 +328,13 @@
                 <div class="table__column column">
                     <div class="column__text text">
                         <div class="text__month-year">
-                            <p>January, 2022</p>
+                            <p class="text__month-year">January, 2022</p>
                         </div>
                         <div class="text__title">
-                            <p>Advisors on Board</p>
+                            <p class="text__title">Advisors on Board</p>
                         </div>
                         <div class="text__description">
-                            <p>Our advisors are John Asper from Bank of America and William Jameson, a renowned
+                            <p class="text__description">Our advisors are John Asper from Bank of America and William Jameson, a renowned
                                 financier who has worked for Morgan Stanley and Barclays.</p>
                         </div>
                     </div>
@@ -347,13 +345,13 @@
                 <div class="table__column column">
                     <div class="column__text text">
                         <div class="text__month-year">
-                            <p>May, 2022</p>
+                            <p class="text__month-year">May, 2022</p>
                         </div>
                         <div class="text__title">
-                            <p>Cryptochange ICO/p>
+                            <p class="text__title">Cryptochange ICO/p>
                         </div>
                         <div class="text__description">
-                            <p>We released our CRP token that will be used on the Cryptochange platform as means of
+                            <p class="text__description">We released our CRP token that will be used on the Cryptochange platform as means of
                                 payment and will be traded on Binance and other trading platforms.</p>
                         </div>
                     </div>
@@ -364,13 +362,13 @@
                 <div class="table__column column">
                     <div class="column__text text">
                         <div class="text__month-year">
-                            <p>April, 2022</p>
+                            <p class="text__month-year">April, 2022</p>
                         </div>
                         <div class="text__title">
-                            <p>Further Development</p>
+                            <p class="text__title">Further Development</p>
                         </div>
                         <div class="text__description">
-                            <p>After the ICO is over, we'll keep working on our Cryptochange exchange platform, add
+                            <p class="text__description">After the ICO is over, we'll keep working on our Cryptochange exchange platform, add
                                 integrations with multiple wallets, like Guarda, Atomic, Lumi, etc.</p>
                         </div>
                     </div>
@@ -381,13 +379,13 @@
                 <div class="table__column column">
                     <div class="column__text text">
                         <div class="text__month-year">
-                            <p>June, 2022</p>
+                            <p class="text__month-year">June, 2022</p>
                         </div>
                         <div class="text__title">
-                            <p>Bug Bounty Launch</p>
+                            <p class="text__title">Bug Bounty Launch</p>
                         </div>
                         <div class="text__description">
-                            <p>Once the development is over, we will fully release the Cryptochange platform and start
+                            <p class="text__description">Once the development is over, we will fully release the Cryptochange platform and start
                                 the bug bounty program. Report a bug and get CRP tokens!</p>
                         </div>
                     </div>
