--- a/index.html
+++ b/index.html
@@ -398,7 +398,62 @@
         <!--end of section 5-->
         <!--6 section-->
         <section class="distribution">
-
+            <div class="distribution_description">
+                <span class="yellow__line">-</span>
+                <h2 class="section-title__title">Distribution</h2>
+                <p class="distribution_section1">We're conducting ICO to raise money for further platform development and promotion.</p>
+                <p class="distribution_section2">We believe in fair token distribution and the future of blockchain and crypto payments.</p>
+                <p class="distribution_section3">The funds raised will help us further work on our platform and fully release it by the end of 2022, as well as start a promo campaign and pay our great developers for their efforts. A bounty campaign is also planned.</p>
+            </div>
+            <div class="distribution_piechart">
+                <img src="img/pie_chart.png" alt="Pie chart">
+                <ul class="distribution_piechart_list">
+                    <li>75% Distributed to Community</li>
+                    <li>13% Reserved Funding</li>
+                    <li>10% Founders and Team</li>
+                    <li>1% Advisors</li>
+                    <li>1% Bounty Campaign</li>
+                </ul>  
+            </div>
+            <div class="distribution_table">
+                <table>
+                    <tr>
+                        <th>Type</th>
+                        <th>Issue</th>
+                        <th>Tokens</th>
+                    </tr>
+                    <tr>
+                        <td>Pre-sale</td>
+                        <td>20%</td>
+                        <td>7,000,000</td>
+                    </tr>
+                    <tr>
+                        <td>Sold During ICO</td>
+                        <td>38%</td>
+                        <td>9,000,000</td>
+                    </tr>
+                    <tr>
+                        <td>Rewards Pool</td>
+                        <td>10%</td>
+                        <td>8,000,000</td>
+                    </tr>
+                    <tr>
+                        <td>Sold on the Platform</td>
+                        <td>20%</td>
+                        <td>5,000,000</td>
+                    </tr>
+                    <tr>
+                        <td>Founding Team</td>
+                        <td>11%</td>
+                        <td>7,000,000</td>
+                    </tr>
+                    <tr>
+                        <td>Bounty Progrmas</td>
+                        <td>1%</td>
+                        <td>3,000,000</td>
+                    </tr>
+                </table>
+            </div>
         </section>
         <!--end of section 6-->
         <!--7 section-->
