added header styles

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header__contacts">
+    <header class="header container" >
+        <!-- <div class="header__contacts">
             <div class="header__contacts-support support">
                 <p class="support__text">Support us on:</p>
                 <a class="support__link" href="#"> ICO listings</a>
@@ -24,12 +24,12 @@
         </div>
         <div class="header__line">
 
-        </div>
+        </div> -->
         <nav class="header__nav">
             <a class="header__logo-container " href="#">
                 <img class="header__logo" src="img/cryptochange-logo.svg" alt="cryptochange-logo">
             </a>
-            <div class="header__menu">
+            <!-- <div class="header__menu">
                 <ul class="header__menu-list list">
                     <li class="list__about-container">
                         <a class="list__about-link" href="#why__cryptochange">About</a>
@@ -47,7 +47,7 @@
                         <a class="list__news-link" href="#news">News</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </nav>
         <div class="header__banner">
             <h1 class="header__banner-title">Blockchain Exchange</h1>
