added more styles to header

--- a/index.html
+++ b/index.html
@@ -14,37 +14,35 @@
     <header class="header container" >
         <!-- <div class="header__contacts">
             <div class="header__contacts-support support">
-                <p class="support__text">Support us on:</p>
+                <p class="support__text">Support us on: </p>
                 <a class="support__link" href="#"> ICO listings</a>
             </div>
             <div class="header__contacts-write write">
-                <p class="write__text">Write us :</p>
+                <p class="write__text">Write us: </p>
                 <a class="write__link" href="mailto:cryptochange@email.com">cryptochange@email.com</a>
             </div>
         </div>
-        <div class="header__line">
-
-        </div> -->
-        <nav class="header__nav">
+        <div class="header__line"></div>
+        <nav class="header__nav"> -->
             <a class="header__logo-container " href="#">
                 <img class="header__logo" src="img/cryptochange-logo.svg" alt="cryptochange-logo">
             </a>
             <!-- <div class="header__menu">
                 <ul class="header__menu-list list">
                     <li class="list__about-container">
-                        <a class="list__about-link" href="#why__cryptochange">About</a>
+                        <a class="list__about-link header__list" href="#why__cryptochange">About</a>
                     <li class="list__roadmap-container">
-                        <a class="list__roadmap-link" href="#roadmap">Roadmap</a>
+                        <a class="list__roadmap-link header__list" href="#roadmap">Roadmap</a>
                     <li class="list__app-container">
-                        <a class="list__app-link" href="#download_application">App</a>
+                        <a class="list__app-link header__list" href="#download_application">App</a>
                     <li class="list__team-container">
-                        <a class="list__team-link" href="#team">Team</a>
+                        <a class="list__team-link header__list" href="#team">Team</a>
                     <li class="list__press-container">
-                        <a class="list__press-link" href="#press">Press</a>
+                        <a class="list__press-link header__list" href="#press">Press</a>
                     <li class="list__feedback-container">
-                        <a class="list__feedback-link" href="#feedback">Feedback</a>
-                    <li class="list__news-container">
-                        <a class="list__news-link" href="#news">News</a>
+                        <a class="list__feedback-link header__list" href="#feedback">Feedback</a>
+                    <li class="list__news-container ">
+                        <a class="list__news-link header__list" href="#news">News</a>
                     </li>
                 </ul>
             </div> -->
