--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <a class="write__link" href="mailto:cryptochange@email.com">cryptochange@email.com</a>
             </div>
         </div>
-        <div class="header__line"></div>
-        <nav class="header__nav"> -->
+        <div class="header__line"></div> -->
+        <nav class="header__nav">
             <a class="header__logo-container " href="#">
                 <img class="header__logo" src="img/cryptochange-logo.svg" alt="cryptochange-logo">
             </a>
