--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,53 @@
         <!--end of section 9-->
         <!--10 section-->
         <section id="news" class="news"></section>
+       <div>
+        <div>
+            <div class="yellow__line"></div>
+            <h3>
+            Get the CRP Token
+            </h3>
+        </div>
+        <p>
+            We issue our CRP tokens during the Cryptochange ICO.
+        </p>
+        <p>
+            If you buy the CRP token now, you'll support our development team and help us make Cryptochange even better! 
+            You could already see the token distribution plan on this site. In addition, our CRP token:
+        </p>
+        <div>
+            <img src="img/check_mark.svg" alt="check_mark">
+            <p>Will be traded on Binance.</p>
+            <p>Gives access to the newest platorm features.</p>
+            <p>Will give you up to <span>25% ROI</span>.</p>
+        </div>
+       </div>
+       <div>
+        <h3>
+            ICO ends <span>22 August 2022</span> 
+        </h3>
+        <div>
+            <div>
+                <p>294</p>
+                <p>Days</p>
+            </div>
+            <div></div>
+            <div>
+                <p>16</p>
+                <p>Hours</p>
+            </div>
+            <div>
+                |
+            </div>
+            <div>
+                <p>51</p>
+                <p>Minutes</p>
+            </div>
+            <div>
+
+            </div>
+        </div>
+       </div>
         <!--end of section 10-->
     </main>
     <footer id="footer" class="footer">
