--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,9 @@
         <div>
             <img src="img/check_mark.svg" alt="check_mark">
             <p>Will be traded on Binance.</p>
+            <img src="img/check_mark.svg" alt="check_mark">
             <p>Gives access to the newest platorm features.</p>
+            <img src="img/check_mark.svg" alt="check_mark">
             <p>Will give you up to <span>25% ROI</span>.</p>
         </div>
        </div>
