add classes in my block (need cryptochanges)

--- a/index.html
+++ b/index.html
@@ -763,87 +763,86 @@
         <!--9 section-->
         <!--Recommendation-add class name into tags (h2, h3, p, div,)-->
         <section class="section__question-need-cryptochange">
-            <div>
-                <div></div>
-                <div class="divider__yellow-dash">
-                    <h2>—</h2>
+            <div class="title__section-question-need-cryptochange">
+                <div class="dash__before-title-question-need-cryptochange">
+                    <h2 class="dash__before-title-text-question-need-cryptochange">—</h2>
                 </div>
-                <h2>Why Do We All Need Cyptochange?</h2>
-                <div class="area__statistics-in-dollars">
-                    <div>
-                        <h2 class="number__statictis-in-dollar">$1.35T</h2>
-                        <div class="divider__grey-dash">
-                            <h3>—</h3>
+                <h2 class="title__question-text-question-need-cryptochange">Why Do We All Need Cyptochange?</h2>
+                <div class="block__statistic-in-dollars">
+                    <div class="title__staticti-in-dollar">
+                        <h2 class="title__text-staticti-in-dollar">$1.35T</h2>
+                        <div class="divider__between-title-and-text">
+                            <h3 class="divider__grey-dash-between-title-and-subtitle">—</h3>
                         </div>
-                        <div class="text__under-statistic-in-dollar">
-                            <p>The global coin market cap right now in 2022.</p>
+                        <div class="subtitle__statistic-in-dollar">
+                            <p class="subtitle__text-statistic-in-dollar">The global coin market cap right now in 2022.</p>
                         </div>
                     </div>
                 </div>
-                <div class="area__statistics-users">
-                    <div>
-                        <h2 class="number__users">100</h2>
-                        <div class="divider__grey-dash">
-                            <h3>—</h3>
+                <div class="block__statistic-users">
+                    <div class="title__statistic-users">
+                        <h2 class="title__text-statistic-users">100</h2>
+                        <div class="divider__between-title-and-text">
+                            <h3 class="divider__grey-dash-between-title-and-subtitle">—</h3>
                         </div>
-                        <div class="text__under-statistics-users">
-                            <p>Million active crypto users over the globe.</p>
+                        <div class="subtitle__statistic-users">
+                            <p class="subtitle__text-statistic-users">Million active crypto users over the globe.</p>
                         </div>
-                        <div class="area__statistics-in-percent">
-                            <div>
-                                <h2 class="number__percent">0%</h2>
-                                <div class="divider__grey-dash">
-                                    <h3>—</h3>
+                        <div class="block__statistic-in-percent">
+                            <div class="title__statictic-in-percent">
+                                <h2 class="title__text-statictic-in-percent">0%</h2>
+                                <div class="divider__between-title-and-text">
+                                    <h3 class="divider__grey-dash-between-title-and-subtitle">—</h3>
                                 </div>
-                                <div class="text__under-statistics-in-percent">
-                                    <p>Fee for any kinds of crypto and fiat exchanges.</p>
+                                <div class="subtitle__statistic-in-percent">
+                                    <p class="subtitle__text-statistic-in-percent">Fee for any kinds of crypto and fiat exchanges.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="area__statistics-speed-transactions">
-                    <div>
-                        <h2 class="number__speed-transaction">x20</h2>
-                        <div class="divider__grey-dash">
-                            <h3>—</h3>
+                <div class="block__statistic-speed-transactions">
+                    <div class="title__statistic-speed-transactions">
+                        <h2 class="title__text-statistic-speed-transaction">x20</h2>
+                        <div class="divider__between-title-and-text">
+                            <h3 class="divider__grey-dash-between-title-and-subtitle">—</h3>
                         </div>
-                        <div class="text__under-statistics-speed-transactions">
-                            <p>Faster transactions with Cryptochange.</p>
+                        <div class="subtitle__statistic-speed-transactions">
+                            <p class="subtitle__text-statistic-speed-transactions">Faster transactions with Cryptochange.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="section__feedback-from-investors">
-            <div>
-                <div class="divider__yellow-dash">
-                    <h2>—</h2>
+            <div class="title__section-feedback-from-investors">
+                <div class="dash__before-title-feedback-from-investors">
+                    <h2 class="dash__before-title-text-feedback-from-investors">—</h2>
                 </div>
-                <h2 id="feedback">Feedback From Our Investors</h2>
-                <div class="box__carrousel-feedback-from-investors">
-                    <div class="investor__Kilian-Smith">
-                        <div class="investor__Kilian-Smith-photo">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60caf511933d3700210aa84f_optimized_800_c754x754-23x23?nowebp"
+                <h2 class="title__text-feedback-from-investors" id="feedback">Feedback From Our Investors</h2>
+                <div class="container__carrousel-with-investors-feedback">
+                    <div class="block__investor-Kilian-Smith">
+                        <div class="block__investor-Kilian-Smith-photo">
+                            <img src="/img/investors_photos/investor_killian_smith.png"
                                 alt="Kilian Smith Photo" width="120">
-                            <div class="investor__Kilian-Smith-textname">
-                                <h3>Killian Smith</h3>
-                                <div class="investor__Kilian-Smith-speech">
-                                    <p>«When I first met the Cryptochange team at Crypto Expo 2022, I realized they had
+                            <div class="block__textname-investor-Kilian-Smith">
+                                <h3 class="text__name-investor-Kilian-Smith">Killian Smith</h3>
+                                <div class="subtext__speech-investor-Kilian-Smith">
+                                    <p class="subtext__text-speech-investor-Kilian-Smith">«When I first met the Cryptochange team at Crypto Expo 2022, I realized they had
                                         a really great idea and almost everything they needed for its implementation.»
                                     </p>
                                 </div>
-                                <div class="date__Kilian-Smith-speech">
+                                <div class="date__post-speech-investor-Kilian-Smith-">
                                     <p>December 15, 2022</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="investor__Diana-Johnson">
-                        <div class="investor__Diana-Johnson-photo">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60caf53a18a9dd00219d4aed_optimized_800_c754x754-23x23?nowebp"
+                    <div class="block__investor-Diana-Johnson">
+                        <div class="block__investor-Diana-Johnson-photo">
+                            <img src="/img/investors_photos/investor_diana_johnson.png"
                                 alt="Diana Johnson Photo" width="120">
-                            <div class="investor__Diana-Johnson-textname">
+                            <div class="block__texname-investor-Diana-Johnson">
                                 <h3>Diana Johnson</h3>
                                 <div class="investor__Diana-Johnson-speech">
                                     <p>«I believe that fast and zero-fee exchanges are crucial for the crypto market to
